2009-09-21  Sancho Lerena  <slerena@artica.es>

	* install.php: Updated  version in the main screen (2.0 > 3.0)

2009-09-18  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: more changes to schema :(. Added id_group to custom graph
	
	* pandoradb_data.sql: Updated build number of DB schema,

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Added new field for upgrade
	script.

2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: change the function "update_agent_module"
	for to add the update only that not delete pending.
	* godmode/agentes/massive_edit_modules.php: fix form to set disabled and
	history data as select box instead checkbox that this had bug because
	it was disabled didn't set false or true in db.
	Fixes: 2860987

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/map_builder.php: add parameter to ajax
	for filter the modules disabled.
	Fixes: 2857374

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/map_builder.php: fix small bug when
	there are'nt any elements in the map and it try loop foearch.

2009-09-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/include/functions_events.php: fix the insert event,
	before Pandora console inserted timestamp as string timestamp, now Pandora
	console insert the event with clean and numeric unix timestamp.
	* pandora_console/include/functions_alerts.php: cleanup the sourcecode.
	Fixes: 2854087

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_agente.php, godmode/alerts/alert_list.php: fix
	bug when there aren't not defined or attach action in template alert. Before
	it was showing the loading ajax gif, now it show the select box with none.

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions_agents.php: cleanup
	sourcecode, and important optimize, because the old querys was very huge